--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -33,7 +33,7 @@
     </div>
     <!--registration number-->
     <div class="form-group">
-        <label data-th-for="${regNo}"></label>
+        <label data-th-for="${regNo}">Registration ID</label>
         <p class="form-control" data-th-text="${studentDetail.regNo}"></p>
     </div>
     <!--First Name-->
@@ -85,7 +85,7 @@
     <!--City-->
     <div class="form-row text-right">
         <div class="col-md-4">
-            <label class="control-label">School :</label>
+            <label class="control-label">City :</label>
         </div>
         <div class="col-md-8">
             <p class="form-control" data-th-text="${studentDetail.city}"></p>
