--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -31,6 +31,7 @@
             <th>Last Name</th>
             <th>Gender</th>
             <th>Date of Birth</th>
+            <th>Address</th>
             <th>City</th>
             <th>School</th>
             <th>Guardian</th>
@@ -45,6 +46,7 @@
             <td data-th-text="${student.regNo}"></td>
             <td data-th-text="${student.firstName}"></td>
             <td data-th-text="${student.lastName}"></td>
+            <td data-th-text="${student.gender}"></td>
             <td data-th-text="${student.dob}"></td>
             <td data-th-text="${student.address}"></td>
             <td data-th-text="${student.city}"></td>
